5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1807_2565.log
== SUBMITION (2019-06-08 20:59:20) 
-- CODE:
mf = array(eval(input("")))
horas = array(eval(input("")))
carga = int(input(""))

x = zeros(3, dtype = int)

for i in mf:
	freqmin = carga - carga/4 
	
	
	
	if mf[i] >= 5 and horas[i] >= freqmin:
		x[0] += 1
	if mf[i] < 5:
		x[1] += 1
	if mf[i] >= 5 and horas[i] < freqmin:
		x[2] += 1

print(x)
-- EXECUTION TIME:
0.559273
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    mf = array(eval(input("")))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:59:25) 
-- CODE:
mf = array(eval(input("")))
horas = array(eval(input("")))
carga = int(input(""))

x = zeros(3, dtype = int)

for i in mf:
	freqmin = carga - carga/4 
	
	
	
	if mf[i] >= 5 and horas[i] >= freqmin:
		x[0] += 1
	if mf[i] < 5:
		x[1] += 1
	if mf[i] >= 5 and horas[i] < freqmin:
		x[2] += 1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    mf = array(eval(input("")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:59:36) 
-- CODE:
from numpy import *

mf = array(eval(input("")))
horas = array(eval(input("")))
carga = int(input(""))

x = zeros(3, dtype = int)

for i in mf:
	freqmin = carga - carga/4 
	
	
	
	if mf[i] >= 5 and horas[i] >= freqmin:
		x[0] += 1
	if mf[i] < 5:
		x[1] += 1
	if mf[i] >= 5 and horas[i] < freqmin:
		x[2] += 1

print(x)
-- EXECUTION TIME:
1.05593
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 14, in <module>
    if mf[i] >= 5 and horas[i] >= freqmin:
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:59:41) 
-- CODE:
from numpy import *

mf = array(eval(input("")))
horas = array(eval(input("")))
carga = int(input(""))

x = zeros(3, dtype = int)

for i in mf:
	freqmin = carga - carga/4 
	
	
	
	if mf[i] >= 5 and horas[i] >= freqmin:
		x[0] += 1
	if mf[i] < 5:
		x[1] += 1
	if mf[i] >= 5 and horas[i] < freqmin:
		x[2] += 1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 21:00:24) 
-- CODE:
from numpy import *

mf = array(eval(input("")))
horas = array(eval(input("")))
carga = int(input(""))

x = zeros(3, dtype = int)
i = 0
while i != size(mf)
	freqmin = carga - carga/4 
	
	
	
	if mf[i] >= 5 and horas[i] >= freqmin:
		x[0] += 1
	if mf[i] < 5:
		x[1] += 1
	if mf[i] >= 5 and horas[i] < freqmin:
		x[2] += 1

print(x)
-- EXECUTION TIME:
0.530427
-- ERROR:
  File "/home/codebench/codes/1807/2565/main.py", line 9
    while i != size(mf)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 21:00:44) 
-- CODE:
from numpy import *

mf = array(eval(input("")))
horas = array(eval(input("")))
carga = int(input(""))

x = zeros(3, dtype = int)

i = 0

while i != size(mf)
	freqmin = carga - carga/4 
	
	if mf[i] >= 5 and horas[i] >= freqmin:
		x[0] += 1
	if mf[i] < 5:
		x[1] += 1
	if mf[i] >= 5 and horas[i] < freqmin:
		x[2] += 1
		
	i += 1
	
print(x)
-- EXECUTION TIME:
0.665452
-- ERROR:
  File "/home/codebench/codes/1807/2565/main.py", line 11
    while i != size(mf)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:00:46) 
-- CODE:
from numpy import *

mf = array(eval(input("")))
horas = array(eval(input("")))
carga = int(input(""))

x = zeros(3, dtype = int)

i = 0

while i != size(mf)
	freqmin = carga - carga/4 
	
	if mf[i] >= 5 and horas[i] >= freqmin:
		x[0] += 1
	if mf[i] < 5:
		x[1] += 1
	if mf[i] >= 5 and horas[i] < freqmin:
		x[2] += 1
		
	i += 1
	
print(x)
-- ERROR:
File "XXXX", line 11
    while i != size(mf)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 21:00:52) 
-- CODE:
from numpy import *

mf = array(eval(input("")))
horas = array(eval(input("")))
carga = int(input(""))

x = zeros(3, dtype = int)

i = 0

while i != size(mf):
	freqmin = carga - carga/4 
	
	if mf[i] >= 5 and horas[i] >= freqmin:
		x[0] += 1
	if mf[i] < 5:
		x[1] += 1
	if mf[i] >= 5 and horas[i] < freqmin:
		x[2] += 1
		
	i += 1
	
print(x)
-- EXECUTION TIME:
1.03908
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 00:16:24) 
-- CODE:
from numpy import *

mf = array(eval(input("")))
horas = array(eval(input("")))
carga = int(input(""))

x = zeros(3, dtype = int)
freqmin = carga - (carga/4)
i = 0

for i in range(size(mf)):
		
	if mf[i] >= 5 and horas[i] >= freqmin:
		x[0] += 1
	elif mf[i] < 5:
		x[1] += 1
	elif horas[i] < freqmin:
		x[2] += 1
	
print(x)
-- EXECUTION TIME:
1.15927
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
